feat: Criando um protótipo inicial de interface para o jogo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,109 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
+    <div id="conteudo-jogo">
+        <div class="grid-jogo">
+            <div id="0" class="grid-jogo-pequeno">
+                <button class="botao-jogo">X</button>
+                <button class="botao-jogo">X</button>
+                <button class="botao-jogo">X</button>
+                <button class="botao-jogo">X</button>
+                <button class="botao-jogo">X</button>
+                <button class="botao-jogo">O</button>
+                <button class="botao-jogo">O</button>
+                <button class="botao-jogo">O</button>
+                <button class="botao-jogo">O</button>
+            </div>
+            <div id="1" class="grid-jogo-pequeno">
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+            </div>
+            <div id="2" class="grid-jogo-pequeno">
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+            </div>
+            <div id="3" class="grid-jogo-pequeno">
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+            </div>
+            <div id="4" class="grid-jogo-pequeno">
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+            </div>
+            <div id="5" class="grid-jogo-pequeno">
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+            </div>
+            <div id="6" class="grid-jogo-pequeno">
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+            </div>
+            <div id="7" class="grid-jogo-pequeno">
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+            </div>
+            <div id="8" class="grid-jogo-pequeno">
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+                <button class="botao-jogo"></button>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
