feat: Criação da função clicarBotao() e implementação da mesma na página HTML

--- a/index.html
+++ b/index.html
@@ -10,103 +10,103 @@
     <div id="conteudo-jogo">
         <div class="grid-jogo">
             <div id="0" class="grid-jogo-pequeno">
-                <button id="00" class="botao-jogo"></button>
-                <button id="01" class="botao-jogo"></button>
-                <button id="02" class="botao-jogo"></button>
-                <button id="03" class="botao-jogo"></button>
-                <button id="04" class="botao-jogo"></button>
-                <button id="05" class="botao-jogo"></button>
-                <button id="06" class="botao-jogo"></button>
-                <button id="07" class="botao-jogo"></button>
-                <button id="08" class="botao-jogo"></button>
+                <button id="00" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="01" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="02" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="03" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="04" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="05" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="06" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="07" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="08" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
             </div>
             <div id="1" class="grid-jogo-pequeno">
-                <button id="10" class="botao-jogo"></button>
-                <button id="11" class="botao-jogo"></button>
-                <button id="12" class="botao-jogo"></button>
-                <button id="13" class="botao-jogo"></button>
-                <button id="14" class="botao-jogo"></button>
-                <button id="15" class="botao-jogo"></button>
-                <button id="16" class="botao-jogo"></button>
-                <button id="17" class="botao-jogo"></button>
-                <button id="18" class="botao-jogo"></button>
+                <button id="10" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="11" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="12" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="13" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="14" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="15" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="16" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="17" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="18" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
             </div>
             <div id="2" class="grid-jogo-pequeno">
-                <button id="20" class="botao-jogo"></button>
-                <button id="21" class="botao-jogo"></button>
-                <button id="22" class="botao-jogo"></button>
-                <button id="23" class="botao-jogo"></button>
-                <button id="24" class="botao-jogo"></button>
-                <button id="25" class="botao-jogo"></button>
-                <button id="26" class="botao-jogo"></button>
-                <button id="27" class="botao-jogo"></button>
-                <button id="28" class="botao-jogo"></button>
+                <button id="20" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="21" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="22" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="23" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="24" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="25" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="26" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="27" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="28" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
             </div>
             <div id="3" class="grid-jogo-pequeno">
-                <button id="30" class="botao-jogo"></button>
-                <button id="31" class="botao-jogo"></button>
-                <button id="32" class="botao-jogo"></button>
-                <button id="33" class="botao-jogo"></button>
-                <button id="34" class="botao-jogo"></button>
-                <button id="35" class="botao-jogo"></button>
-                <button id="36" class="botao-jogo"></button>
-                <button id="37" class="botao-jogo"></button>
-                <button id="38" class="botao-jogo"></button>
+                <button id="30" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="31" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="32" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="33" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="34" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="35" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="36" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="37" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="38" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
             </div>
             <div id="4" class="grid-jogo-pequeno">
-                <button id="40" class="botao-jogo"></button>
-                <button id="41" class="botao-jogo"></button>
-                <button id="42" class="botao-jogo"></button>
-                <button id="43" class="botao-jogo"></button>
-                <button id="44" class="botao-jogo"></button>
-                <button id="45" class="botao-jogo"></button>
-                <button id="46" class="botao-jogo"></button>
-                <button id="47" class="botao-jogo"></button>
-                <button id="48" class="botao-jogo"></button>
+                <button id="40" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="41" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="42" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="43" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="44" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="45" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="46" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="47" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="48" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
             </div>
             <div id="5" class="grid-jogo-pequeno">
-                <button id="50" class="botao-jogo"></button>
-                <button id="51" class="botao-jogo"></button>
-                <button id="52" class="botao-jogo"></button>
-                <button id="53" class="botao-jogo"></button>
-                <button id="54" class="botao-jogo"></button>
-                <button id="55" class="botao-jogo"></button>
-                <button id="56" class="botao-jogo"></button>
-                <button id="57" class="botao-jogo"></button>
-                <button id="58" class="botao-jogo"></button>
+                <button id="50" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="51" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="52" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="53" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="54" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="55" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="56" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="57" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="58" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
             </div>
             <div id="6" class="grid-jogo-pequeno">
-                <button id="60" class="botao-jogo"></button>
-                <button id="61" class="botao-jogo"></button>
-                <button id="62" class="botao-jogo"></button>
-                <button id="63" class="botao-jogo"></button>
-                <button id="64" class="botao-jogo"></button>
-                <button id="65" class="botao-jogo"></button>
-                <button id="66" class="botao-jogo"></button>
-                <button id="67" class="botao-jogo"></button>
-                <button id="68" class="botao-jogo"></button>
+                <button id="60" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="61" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="62" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="63" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="64" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="65" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="66" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="67" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="68" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
             </div>
             <div id="7" class="grid-jogo-pequeno">
-                <button id="70" class="botao-jogo"></button>
-                <button id="71" class="botao-jogo"></button>
-                <button id="72" class="botao-jogo"></button>
-                <button id="73" class="botao-jogo"></button>
-                <button id="74" class="botao-jogo"></button>
-                <button id="75" class="botao-jogo"></button>
-                <button id="76" class="botao-jogo"></button>
-                <button id="77" class="botao-jogo"></button>
-                <button id="78" class="botao-jogo"></button>
+                <button id="70" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="71" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="72" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="73" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="74" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="75" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="76" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="77" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="78" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
             </div>
             <div id="8" class="grid-jogo-pequeno">
-                <button id="80" class="botao-jogo"></button>
-                <button id="81" class="botao-jogo"></button>
-                <button id="82" class="botao-jogo"></button>
-                <button id="83" class="botao-jogo"></button>
-                <button id="84" class="botao-jogo"></button>
-                <button id="85" class="botao-jogo"></button>
-                <button id="86" class="botao-jogo"></button>
-                <button id="87" class="botao-jogo"></button>
-                <button id="88" class="botao-jogo"></button>
+                <button id="80" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="81" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="82" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="83" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="84" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="85" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="86" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="87" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
+                <button id="88" class="botao-jogo" onclick="clicarBotao(this.id)"></button>
             </div>
         </div>
     </div>
