--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Jogo da Velha</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div id="conteudo-jogo">
@@ -110,7 +110,6 @@
             </div>
         </div>
     </div>
-    <script type="module" src="utils.js"></script>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./src/script.js"></script>
 </body>
 </html>
