--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
             </div>
         </div>
     </div>
-    <script type="module" src="./src/script.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
