feat: new funcion padrao clean code e solid

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div id="placarO">Jogador 1 (O): 0</div>
+    <div id="placarX">Jogador 2 (X): 0</div>
+    <br>
+
     <div id="conteudo-jogo">
         <div class="grid-jogo">
+            
             <div id="00" class="grid-jogo-pequeno">
                 <button class="00"></button>
                 <button class="01"></button>
