--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <button class="20"></button>
                 <button class="21"></button>
                 <button class="22"></button>
+                <div class="vencedor"></div>
             </div>
             <div id="01" class="grid-jogo-pequeno">
                 <button class="00"></button>
@@ -35,6 +36,7 @@
                 <button class="20"></button>
                 <button class="21"></button>
                 <button class="22"></button>
+                <div class="vencedor"></div>
             </div>
             <div id="02" class="grid-jogo-pequeno">
                 <button class="00"></button>
@@ -46,6 +48,7 @@
                 <button class="20"></button>
                 <button class="21"></button>
                 <button class="22"></button>
+                <div class="vencedor"></div>
             </div>
             <div id="10" class="grid-jogo-pequeno">
                 <button class="00"></button>
@@ -57,6 +60,7 @@
                 <button class="20"></button>
                 <button class="21"></button>
                 <button class="22"></button>
+                <div class="vencedor"></div>
             </div>
             <div id="11" class="grid-jogo-pequeno">
                 <button class="00"></button>
@@ -68,6 +72,7 @@
                 <button class="20"></button>
                 <button class="21"></button>
                 <button class="22"></button>
+                <div class="vencedor"></div>
             </div>
             <div id="12" class="grid-jogo-pequeno">
                 <button class="00"></button>
@@ -79,6 +84,7 @@
                 <button class="20"></button>
                 <button class="21"></button>
                 <button class="22"></button>
+                <div class="vencedor"></div>
             </div>
             <div id="20" class="grid-jogo-pequeno">
                 <button class="00"></button>
@@ -90,6 +96,7 @@
                 <button class="20"></button>
                 <button class="21"></button>
                 <button class="22"></button>
+                <div class="vencedor"></div>
             </div>
             <div id="21" class="grid-jogo-pequeno">
                 <button class="00"></button>
@@ -101,6 +108,7 @@
                 <button class="20"></button>
                 <button class="21"></button>
                 <button class="22"></button>
+                <div class="vencedor"></div>
             </div>
             <div id="22" class="grid-jogo-pequeno">
                 <button class="00"></button>
@@ -112,6 +120,7 @@
                 <button class="20"></button>
                 <button class="21"></button>
                 <button class="22"></button>
+                <div class="vencedor"></div>
             </div>
         </div>
     </div>
