fix: adição de função do botão pelo JS

--- a/tela-inicial/index.html
+++ b/tela-inicial/index.html
@@ -14,9 +14,9 @@
     <h1>Super Jogo da Velha</h1>
   </header>
   <main id="painel-jogo">
-    <button onclick="configurarJogo()">Jogar</button>
-    <button onclick="mostrarRegras()">Como jogar</button>
+    <button id="botao-jogar">Jogar</button>
+    <button id="botao-regras">Como jogar</button>
   </main>
-  <script src="./index.js"></script>
+  <script type="module" src="./index.js"></script>
 </body>
 </html>
