--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <h1>Super Jogo da Velha</h1>
   </header>
   <main id="painel-jogo">
-    <button id="botao-jogar">Jogar</button>
-    <button id="botao-regras">Como jogar</button>
+    <div id="container-botoes-interface">
+      <button id="botao-jogar">Jogar</button>
+      <button id="botao-regras">Como jogar</button>
+    </div>
   </main>
   <script type="module" src="../scripts/index.js"></script>
 </body>
