feat: obtendo símbolo do jogador dinamicamente

--- a/jogar.html
+++ b/jogar.html
@@ -18,7 +18,7 @@
     <aside class="container">
       <button id="botao-voltar">VOLTAR</button>
   
-      <div id="container-primeiro-jogador">
+      <div id="container-primeiro-jogador" class="jogador">
         <h1 class="nome"></h1>
         <h1 class="simbolo"></h1>
         <button>SORTEAR</button>
@@ -34,7 +34,7 @@
         <button id="botao-reiniciar">REINICIAR</button>
       </div>
   
-      <div id="container-segundo-jogador">
+      <div id="container-segundo-jogador" class="jogador">
         <h1 class="nome"></h1>
         <h1 class="simbolo"></h1>
         <button>SORTEAR</button>
