feat: ação do botão de sorteio

--- a/jogar.html
+++ b/jogar.html
@@ -21,7 +21,7 @@
       <div id="container-primeiro-jogador" class="jogador">
         <h1 class="nome"></h1>
         <h1 class="simbolo"></h1>
-        <button>SORTEAR</button>
+        <button class="botao-sorteio">SORTEAR</button>
       </div>
     </aside>
     
@@ -37,7 +37,7 @@
       <div id="container-segundo-jogador" class="jogador">
         <h1 class="nome"></h1>
         <h1 class="simbolo"></h1>
-        <button>SORTEAR</button>
+        <button class="botao-sorteio">SORTEAR</button>
       </div>
     </aside>
   </main>
