feat: Estilizando o jogo.

--- a/configuracoes.html
+++ b/configuracoes.html
@@ -49,3 +49,123 @@
   <script type="module" src="./scripts/configuracoes.js"></script>
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      
+      .character-table {
+            position: absolute;
+            color: rgba(0, 0, 0, 0.438);
+        }
+
+        /* Estilos para as células da tabela */
+        .character-cell {
+            font-size: 5rem;
+            font-weight: bold;
+            text-align: center;
+            padding: 0px;
+        }  
+
+        /* Estilos para a posição superior esquerda */
+        .top-left {
+            top: 10px;
+            left: 10px;
+           
+        }
+
+        /* Estilos para a posição superior direita */
+        .top-right {
+            top: 10px;
+            right: 10px;
+        }
+
+        /* Estilos para a posição inferior esquerda */
+        .bottom-left {
+            bottom: 20px;
+            left: 10px;
+        }
+
+        /* Estilos para a posição inferior direita */
+        .bottom-right {
+            bottom: 20px;
+            right: 10px;
+        }
+    </style>
+</head>
+<body>
+
+ <table class="character-table top-left">
+<tr>
+  <td class="character-cell">O X O X O X O X O X O</td>
+</tr>
+</table>
+  
+<table class="character-table top-right">
+  <tr>
+    <td class="character-cell">O X O X O X O X O X O</td>
+  </tr>
+  </table>
+
+<table class="character-table bottom-left">
+   
+      <tr>
+        <td class="character-cell">X</td>
+    </tr>
+    <tr>
+        <td class="character-cell">O</td>
+    </tr>
+    <tr>
+      <td class="character-cell">X</td>
+  </tr>
+  <tr>
+      <td class="character-cell">O</td>
+  </tr>
+    <tr>
+      <td class="character-cell">X</td>
+  </tr>
+  <tr>
+    <td class="character-cell">O</td>
+  </tr>
+  <tr>
+    <td class="character-cell">X</td>
+</tr>
+<tr>
+    <td class="character-cell">O</td>
+</tr>
+
+  </table>
+
+    <table class="character-table bottom-right">
+   
+      <tr>
+        <td class="character-cell">X</td>
+    </tr>
+    <tr>
+        <td class="character-cell">O</td>
+    </tr>
+    <tr>
+      <td class="character-cell">X</td>
+  </tr>
+  <tr>
+      <td class="character-cell">O</td>
+  </tr>
+    <tr>
+      <td class="character-cell">X</td>
+  </tr>
+  <tr>
+    <td class="character-cell">O</td>
+  </tr>
+  <tr>
+    <td class="character-cell">X</td>
+</tr>
+<tr>
+    <td class="character-cell">O</td>
+</tr>
+    </table>
+</body>
+</html>
