Atualizando a interface gráfica

--- a/configuracoes.html
+++ b/configuracoes.html
@@ -42,7 +42,9 @@
         <input type="number" id="dimensoes-tabuleiro" min="3" max="3">
         <br>
       </form>
-      <button id="botao-iniciar">Iniciar</button>
+      <div id="container-botao-iniciar">
+        <button id="botao-iniciar">Iniciar</button>
+      </div>
     </div>
   </main>
   <script type="module" src="./scripts/configuracoes.js"></script>
