fix: correção de caminho dos arquivos

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       <button id="botao-regras">Como jogar</button>
     </div>
   </main>
-  <script type="module" src="../scripts/index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
